fix: return snapshot copy from getAllStaged() to prevent inconsistent iteration